--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "onnx-electron-app",
+  "name": "vigil-electron",
   "version": "1.0.0",
+  "description": "VIGIL - Vision & Intelligence Guard for Industrial Lines",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0",
+    "lucide-react": "^0.303.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "electron": "^28.1.0"
   }
 }
